Fix Logo color and font size when window is small
- Fix bkn and bos color were swapped
- Fix font size is too small when window is small

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -226,7 +226,7 @@ sup {
 
 /* Summary Table*/
 #box {
-    font-size: 1.1vw;
+    font-size: calc(12px + 0.2vw);
     padding: 0 0 0 0;
     margin-left: 1vw;
     background-color: #E9EBEE;
